Quick fix
The hero image doesn't partly overlap the navigation bar anymore when it is expanded (mobile view)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -253,14 +253,15 @@ h4, .h4, h5, .h5, h6, .h6 {
 
 /* - Header container */
 .container-hero {
-    height: 66vh;
+    display: block;
+    height: 66vh !important;
     margin-top: -6rem;
+    transition: margin-top .2s cubic-bezier(.17,.84,.44,1)
 }
-.container-hero__dummy {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+#container-hero.collapsing, #container-hero.collapse.in {
+    margin-top: -1rem
+}
+.container-hero__block {
     height: inherit;
 }
 
